[23] JEP 476: Module Import Declarations (Preview)
more tests regarding:
+ ambiguity from just one module import (incl. fix)